Improved robustness of application schema mapper